[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "habit-tracker-ai-mcp"
version = "1.0.0"
description = "Habit Tracker Ai MCP server. Tools: create habit, log completion, get habit streak. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "habit", "tracker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/habit-tracker-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
habit_tracker_ai_mcp = "server:main"
